// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly when consulation has ended 1`] = `
<div>
  <h1
    class="page-header__heading mt--0"
    data-qa-sel="changeable-page-header"
  >
    My title has changed
  </h1>
  <div
    class="mb--d"
  >
    <p
      class="container container-full ml--0"
    >
      <span>
        <span
          class="tag"
        >
          Closed for comments
        </span>
         
        This consultation 
        ended
         on 
        <time
          datetime="784041330000"
        >
          5 November 1994
        </time>
         at
         
        <time
          datetime="784041330000"
        >
          13:15
        </time>
      </span>
        
      <a
        href="/leadinformation"
      >
        Request commenting lead permission
      </a>
    </p>
  </div>
  <p>
    Subtitle 1
  </p>
</div>
`;

exports[`should display correctly when consulation hasn't started 1`] = `
<div>
  <h1
    class="page-header__heading mt--0"
    data-qa-sel="changeable-page-header"
  >
    My title
  </h1>
  <div
    class="mb--d"
  >
    <p
      class="container container-full ml--0"
    >
      <span>
        <span
          class="tag"
        >
          Not yet open for comments
        </span>
         
        This consultation 
        starts
         on 
        <time
          datetime="1660032000000"
        >
          9 August 2022
        </time>
         at
         
        <time
          datetime="1660032000000"
        >
          09:00
        </time>
      </span>
        
      <a
        href="/leadinformation"
      >
        Request commenting lead permission
      </a>
    </p>
  </div>
  <p>
    Subtitle 1
  </p>
  <div
    class="alert alert--caution"
    role="alert"
  >
    <p>
      Subtitle 2
    </p>
  </div>
</div>
`;

exports[`should display correctly when consulation is in progress 1`] = `
<div>
  <h1
    class="page-header__heading mt--0"
    data-qa-sel="changeable-page-header"
  >
    My title
  </h1>
  <div
    class="mb--d"
  >
    <p
      class="container container-full ml--0"
    >
      <span>
        <span
          class="tag tag--open"
        >
          Open for comments
        </span>
         Open until
         
        <time
          datetime="784041330000"
        >
          5 November 1994
        </time>
      </span>
        
      <a
        href="/leadinformation"
      >
        Request commenting lead permission
      </a>
    </p>
  </div>
  <p>
    Subtitle 1
  </p>
</div>
`;
